--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -2,12 +2,14 @@
 @import "neat/neat";
 
 // Variables //
-$sans-serif: 'Source Sans Pro', sans-serif;
+$header-copy: 'Source Sans Pro', sans-serif;
+$body-copy: 'Source Sans Pro', sans-serif;
 $dark-gray: #333 !default;
 $large-screen: 53.75em !default;
 $base-font-color: $dark-gray !default;
 $white: #ffffff;
 $action-color: #CC3B6A;
+$accent-color: #799299;
 
 // Design Elements //
 .clearfix {
@@ -22,19 +24,36 @@ html { font-size: 62.5%; }
 body {
   margin: 0;
   padding: 0;
-  font-family: $sans-serif;
+  font-family: $body-copy;
   font-size: 1.6rem;
   text-align: left;
   color: $base-font-color;
 }
 section { padding: 2rem; }
 header {
-  height: 280px;
+  height: 300px;
   background: url("../images/hexagons.png") no-repeat center bottom;
   background-size: cover;
   background-clip: content-box;
+  margin-top: 30px;
+  @include media ($large-screen) {
+    //margin-top: 60px;
+  }
+
+  h1 {
+    max-width: 380px;
+    margin: .5em auto;
+  }
 }
 
+
+// Typography //
+h1, h2, h3, h4 {
+  font-family: $header-copy;
+  color: $accent-color;
+  text-align: center;
+}
+h1 { font-weight: normal; }
 
 // Nav //
 .centered-navigation {
@@ -50,6 +69,8 @@ header {
   min-height: $centered-navigation-height;
   width: 100%;
   z-index: 9999;
+  position: fixed;
+  top: 0;
 
   // Mobile view
 
@@ -66,7 +87,6 @@ header {
   }
 
   // Nav menu
-
   .centered-navigation-wrapper {
     @include outer-container;
     @include clearfix;
@@ -135,7 +155,10 @@ form {
 
 // Header //
 #profilePic {
-  max-width: 200px;
+  max-width: 100px;
+  margin: 0 auto;
+  display: block;
+  padding-top: 5.8em;
 }
 
 // Projects //
