Added font awesome
For social media icons

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,5 +1,6 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
+@import "font-awesome";
 
 // Variables //
 $header-copy: 'Source Sans Pro', sans-serif;
@@ -10,6 +11,7 @@ $base-font-color: $dark-gray !default;
 $white: #ffffff;
 $action-color: #CC3B6A;
 $accent-color: #799299;
+
 
 // Design Elements //
 .clearfix {
@@ -45,6 +47,14 @@ header {
     margin: .5em auto;
   }
 }
+.social-media {
+  ul {
+    list-style-type: none;
+    margin: 0 auto;
+    display: block;
+  }
+  li { float: left; }
+}
 
 
 // Typography //
@@ -54,6 +64,8 @@ h1, h2, h3, h4 {
   text-align: center;
 }
 h1 { font-weight: normal; }
+.fa { color: $accent-color; }
+
 
 // Nav //
 .centered-navigation {
