--- a/assets/style/font-awesome.css
+++ b/assets/style/font-awesome.css
@@ -1,10 +1,4 @@
 @charset "UTF-8";
-html {
-  box-sizing: border-box; }
-
-*, *::after, *::before {
-  box-sizing: inherit; }
-
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -2191,139 +2185,4 @@ html {
   overflow: visible;
   clip: auto; }
 
-.clearfix {
-  overflow: auto;
-  zoom: 1;
-  clear: both; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.6rem;
-  text-align: left;
-  color: #333; }
-
-section {
-  padding: 2rem; }
-
-header {
-  height: 300px;
-  background: url("../images/hexagons.png") no-repeat center bottom;
-  background-size: cover;
-  background-clip: content-box;
-  margin-top: 30px; }
-  header h1 {
-    max-width: 380px;
-    margin: .5em auto; }
-
-.social-media ul {
-  list-style-type: none;
-  margin: 0 auto;
-  display: block; }
-.social-media li {
-  float: left; }
-
-h1, h2, h3, h4 {
-  font-family: "Source Sans Pro", sans-serif;
-  color: #799299;
-  text-align: center; }
-
-h1 {
-  font-weight: normal; }
-
-.fa {
-  color: #799299; }
-
-.centered-navigation {
-  background-color: #ffffff;
-  border-bottom: 1px solid #CC3B6A;
-  min-height: 60px;
-  width: 100%;
-  z-index: 9999;
-  position: fixed;
-  top: 0; }
-  .centered-navigation .centered-navigation-mobile-menu {
-    color: #CC3B6A;
-    display: block;
-    line-height: 60px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold; }
-    @media screen and (min-width: 53.75em) {
-      .centered-navigation .centered-navigation-mobile-menu {
-        display: none; } }
-    .centered-navigation .centered-navigation-mobile-menu:focus, .centered-navigation .centered-navigation-mobile-menu:hover {
-      color: #333; }
-  .centered-navigation .centered-navigation-wrapper {
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    z-index: 999; }
-    .centered-navigation .centered-navigation-wrapper::after {
-      clear: both;
-      content: "";
-      display: table; }
-    .centered-navigation .centered-navigation-wrapper::after {
-      clear: both;
-      content: "";
-      display: table; }
-  .centered-navigation ul.centered-navigation-menu {
-    clear: both;
-    display: none;
-    margin: 0 auto;
-    overflow: visible;
-    padding: 0;
-    -webkit-transform-style: preserve-3d;
-    width: 100%;
-    z-index: 99999; }
-    .centered-navigation ul.centered-navigation-menu.show {
-      display: block; }
-    @media screen and (min-width: 53.75em) {
-      .centered-navigation ul.centered-navigation-menu {
-        display: block;
-        text-align: center; } }
-  .centered-navigation ul li.nav-link {
-    background: #ffffff;
-    display: block;
-    line-height: 60px;
-    overflow: hidden;
-    text-align: center;
-    width: 100%;
-    z-index: 9999; }
-    @media screen and (min-width: 53.75em) {
-      .centered-navigation ul li.nav-link {
-        border-right: 1px solid #CC3B6A; }
-        .centered-navigation ul li.nav-link:last-of-type {
-          border-right: 0; } }
-    .centered-navigation ul li.nav-link a {
-      color: #CC3B6A;
-      display: inline-block;
-      outline: none;
-      text-decoration: none;
-      font-weight: bold; }
-      .centered-navigation ul li.nav-link a:focus, .centered-navigation ul li.nav-link a:hover {
-        color: #333; }
-    @media screen and (min-width: 53.75em) {
-      .centered-navigation ul li.nav-link {
-        background: transparent;
-        display: inline;
-        line-height: 60px; }
-        .centered-navigation ul li.nav-link a {
-          padding: 0 2.2em; } }
-
-form {
-  float: left;
-  margin: 0 1rem; }
-
-#profilePic {
-  max-width: 100px;
-  margin: 0 auto;
-  display: block;
-  padding-top: 5.8em; }
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=font-awesome.css.map */
