--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2211,21 +2211,49 @@ section {
   padding: 2rem; }
 
 header {
-  height: 300px;
-  background: url("../images/hexagons.png") no-repeat center bottom;
-  background-size: cover;
-  background-clip: content-box;
-  margin-top: 30px; }
+  margin: 60px 0 0 0;
+  z-index: 10; }
+  header::after {
+    clear: both;
+    content: "";
+    display: table; }
   header h1 {
-    max-width: 380px;
-    margin: .5em auto; }
+    margin: .5em auto;
+    padding: 0 2rem; }
+  header p {
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0 2rem; }
 
+.social-media::after {
+  clear: both;
+  content: "";
+  display: table; }
 .social-media ul {
+  width: 220px;
   list-style-type: none;
-  margin: 0 auto;
+  margin: 1.5em auto;
+  padding: 0;
   display: block; }
+  .social-media ul::after {
+    clear: both;
+    content: "";
+    display: table; }
 .social-media li {
-  float: left; }
+  width: 44px;
+  height: 52px;
+  padding: 15px 1px 0 12px;
+  float: left;
+  background: url("../images/inactiveHex.png") no-repeat center top;
+  background-size: 44px; }
+  .social-media li .fa {
+    font-size: 1.6em; }
+.social-media .activeHex {
+  background: url("../images/activeHex.png") no-repeat center top;
+  background-size: 44px; }
+  .social-media .activeHex:hover .fa {
+    color: #CC3B6A; }
 
 h1, h2, h3, h4 {
   font-family: "Source Sans Pro", sans-serif;
@@ -2233,7 +2261,18 @@ h1, h2, h3, h4 {
   text-align: center; }
 
 h1 {
-  font-weight: normal; }
+  font-weight: normal;
+  font-size: 2.6rem; }
+  @media screen and (min-width: 53.75em) {
+    h1 {
+      font-size: 2.8rem; } }
+
+h2 {
+  font-weight: normal;
+  font-size: 3.2rem; }
+  @media screen and (min-width: 53.75em) {
+    h2 {
+      font-size: 4rem; } }
 
 .fa {
   color: #799299; }
@@ -2320,10 +2359,20 @@ form {
   float: left;
   margin: 0 1rem; }
 
+.hexBG {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  background: url("../images/hexagons.png") no-repeat center bottom;
+  background-size: cover;
+  background-clip: content-box; }
+
 #profilePic {
   max-width: 100px;
   margin: 0 auto;
   display: block;
-  padding-top: 5.8em; }
+  padding-top: 3.2rem; }
 
 /*# sourceMappingURL=main.css.map */
