--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -33,27 +33,46 @@ body {
 }
 section { padding: 2rem; }
 header {
-  height: 300px;
-  background: url("../images/hexagons.png") no-repeat center bottom;
-  background-size: cover;
-  background-clip: content-box;
-  margin-top: 30px;
-  @include media ($large-screen) {
-    //margin-top: 60px;
-  }
+  margin: 60px 0 0 0;
+  z-index: 10;
+  @include clearfix;
 
   h1 {
-    max-width: 380px;
     margin: .5em auto;
+    padding: 0 2rem;
+  }
+  p {
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0 2rem;
   }
 }
 .social-media {
+  @include clearfix;
+
   ul {
+    width: 220px;
     list-style-type: none;
-    margin: 0 auto;
+    margin: 1.5em auto;
+    padding: 0;
     display: block;
+    @include clearfix;
   }
-  li { float: left; }
+  li {
+    width: 44px;
+    height: 52px;
+    padding: 15px 1px 0 12px;
+    float: left;
+    background: url("../images/inactiveHex.png") no-repeat center top;
+    background-size: 44px;
+    .fa { font-size: 1.6em; }
+  }
+  .activeHex {
+    background: url("../images/activeHex.png") no-repeat center top;
+    background-size: 44px;
+    &:hover .fa { color: $action-color; }
+  }
 }
 
 
@@ -63,7 +82,18 @@ h1, h2, h3, h4 {
   color: $accent-color;
   text-align: center;
 }
-h1 { font-weight: normal; }
+h1 {
+  font-weight: normal;
+  font-size: 2.6rem;
+
+  @include media ($large-screen) { font-size: 2.8rem; }
+}
+h2 {
+  font-weight: normal;
+  font-size: 3.2rem;
+
+  @include media ($large-screen) { font-size: 4rem; }
+}
 .fa { color: $accent-color; }
 
 
@@ -166,11 +196,21 @@ form {
 }
 
 // Header //
+.hexBG{
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  background: url("../images/hexagons.png") no-repeat center bottom;
+  background-size: cover;
+  background-clip: content-box;
+}
 #profilePic {
   max-width: 100px;
   margin: 0 auto;
   display: block;
-  padding-top: 5.8em;
+  padding-top: 3.2rem;
 }
 
-// Projects //
+// Recent Projects //
