--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -31,7 +31,11 @@ body {
   text-align: left;
   color: $base-font-color;
 }
-section { padding: 2rem; }
+section {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 2rem;
+}
 header {
   margin: 60px 0 0 0;
   z-index: 10;
@@ -64,12 +68,12 @@ header {
     height: 52px;
     padding: 15px 1px 0 11px;
     float: left;
-    background: url("../images/inactiveHex.png") no-repeat center top;
+    background: url("../../images/inactiveHex.png") no-repeat center top;
     background-size: 44px;
     .fa { font-size: 1.6em; }
   }
   .activeHex {
-    background: url("../images/activeHex.png") no-repeat center top;
+    background: url("../../images/activeHex.png") no-repeat center top;
     background-size: 44px;
     &:hover .fa { color: $action-color; }
   }
@@ -102,6 +106,11 @@ h3 {
   @include media ($large-screen) { font-size: 3rem; }
 }
 .fa { color: $accent-color; }
+a:link, a:visited, a:active {
+  font-weight: bold;
+  color: $action-color;
+}
+a:hover { color: $dark-gray; }
 
 
 // Nav //
@@ -209,7 +218,7 @@ form {
   position: absolute;
   top: 0;
   z-index: -1;
-  background: url("../images/hexagons.png") no-repeat center bottom;
+  background: url("../../images/hexagons.png") no-repeat center bottom;
   background-size: cover;
   background-clip: content-box;
 }
@@ -222,8 +231,7 @@ form {
 
 // Recent Projects //
 #recentProjects {
-  max-width: 1120px;
-  margin: 0 auto;
+  max-width: 1150px;
 
   a { text-decoration: none; }
   a:last-of-type {
@@ -238,7 +246,7 @@ form {
   width: 350px;
   height: 220px;
   margin: 0 .5rem 2rem;
-  background: url("../images/subHexagons.png") no-repeat center top;
+  background: url("../../images/subHexagons.png") no-repeat center top;
   background-size: 180%;
   background-clip: content-box;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -249,7 +257,7 @@ form {
     height: 75px;
     margin: 1rem 0;
     padding: 3rem 0;
-    background: url("../images/activeHex.png") no-repeat center;
+    background: url("../../images/activeHex.png") no-repeat center;
     background-size: 48px;
 
     img {
@@ -279,4 +287,14 @@ form {
 #process {
   max-width: 700px;
   margin: 0 auto;
+}
+
+// Project Containers //
+#project-container {
+  margin-top: 60px;
+  .projectLink {
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+  }
 }
