--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2430,6 +2430,7 @@ form {
         padding: 2rem 0; } }
   .project p {
     text-align: center;
+    font-weight: normal;
     color: #333;
     padding: 0 1rem;
     text-decoration: none; }
