--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -272,6 +272,7 @@ form {
   }
   p {
     text-align: center;
+    font-weight: normal; 
     color: $dark-gray;
     padding: 0 1rem;
     text-decoration: none;
