--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2459,4 +2459,11 @@ form {
     margin: 0 auto;
     display: block; }
 
+footer .in-progress {
+  width: 100%;
+  background-color: #E0E0E0;
+  text-align: center;
+  padding: 1rem;
+  margin-top: 1rem; }
+
 /*# sourceMappingURL=main.css.map */
