--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2191,6 +2191,428 @@ html {
   overflow: visible;
   clip: auto; }
 
+.button-wrapper {
+  padding: .5em 0 !important;
+  text-align: center; }
+
+.basic-button,
+.basic-button-primary,
+.basic-button:visited,
+.basic-button-primary:visited,
+button,
+[type="button"],
+[type="submit"],
+[type="reset"],
+[type="image"] {
+  margin-top: 0.5em;
+  margin-right: 0.5em;
+  margin-bottom: 0.5em;
+  -webkit-font-smoothing: antialiased;
+  appearance: none;
+  background-color: #CC3B6A;
+  border: 0;
+  display: inline-block;
+  color: #ffffff;
+  cursor: pointer;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2.2rem;
+  outline: none;
+  padding: 1.5rem;
+  text-align: left;
+  text-decoration: none;
+  width: auto;
+  min-height: 44px; }
+  .basic-button:hover, .basic-button:link, .basic-button:visited, .basic-button:active
+  .basic-button.basic-button-hover,
+  .basic-button-primary:hover,
+  .basic-button-primary:link,
+  .basic-button-primary:visited,
+  .basic-button-primary:active
+  .basic-button.basic-button-hover,
+  .basic-button:visited:hover,
+  .basic-button:visited:link,
+  .basic-button:visited:visited,
+  .basic-button:visited:active
+  .basic-button.basic-button-hover,
+  .basic-button-primary:visited:hover,
+  .basic-button-primary:visited:link,
+  .basic-button-primary:visited:visited,
+  .basic-button-primary:visited:active
+  .basic-button.basic-button-hover,
+  button:hover,
+  button:link,
+  button:visited,
+  button:active
+  .basic-button.basic-button-hover,
+  [type="button"]:hover,
+  [type="button"]:link,
+  [type="button"]:visited,
+  [type="button"]:active
+  .basic-button.basic-button-hover,
+  [type="submit"]:hover,
+  [type="submit"]:link,
+  [type="submit"]:visited,
+  [type="submit"]:active
+  .basic-button.basic-button-hover,
+  [type="reset"]:hover,
+  [type="reset"]:link,
+  [type="reset"]:visited,
+  [type="reset"]:active
+  .basic-button.basic-button-hover,
+  [type="image"]:hover,
+  [type="image"]:link,
+  [type="image"]:visited,
+  [type="image"]:active
+  .basic-button.basic-button-hover, .basic-button:active
+  .basic-button-primary.basic-button-hover,
+  .basic-button-primary:active
+  .basic-button-primary.basic-button-hover,
+  .basic-button:visited:active
+  .basic-button-primary.basic-button-hover,
+  .basic-button-primary:visited:active
+  .basic-button-primary.basic-button-hover,
+  button:active
+  .basic-button-primary.basic-button-hover,
+  [type="button"]:active
+  .basic-button-primary.basic-button-hover,
+  [type="submit"]:active
+  .basic-button-primary.basic-button-hover,
+  [type="reset"]:active
+  .basic-button-primary.basic-button-hover,
+  [type="image"]:active
+  .basic-button-primary.basic-button-hover, .basic-button:active
+  .basic-button:visited.basic-button-hover,
+  .basic-button-primary:active
+  .basic-button:visited.basic-button-hover,
+  .basic-button:visited:active
+  .basic-button:visited.basic-button-hover,
+  .basic-button-primary:visited:active
+  .basic-button:visited.basic-button-hover,
+  button:active
+  .basic-button:visited.basic-button-hover,
+  [type="button"]:active
+  .basic-button:visited.basic-button-hover,
+  [type="submit"]:active
+  .basic-button:visited.basic-button-hover,
+  [type="reset"]:active
+  .basic-button:visited.basic-button-hover,
+  [type="image"]:active
+  .basic-button:visited.basic-button-hover, .basic-button:active
+  .basic-button-primary:visited.basic-button-hover,
+  .basic-button-primary:active
+  .basic-button-primary:visited.basic-button-hover,
+  .basic-button:visited:active
+  .basic-button-primary:visited.basic-button-hover,
+  .basic-button-primary:visited:active
+  .basic-button-primary:visited.basic-button-hover,
+  button:active
+  .basic-button-primary:visited.basic-button-hover,
+  [type="button"]:active
+  .basic-button-primary:visited.basic-button-hover,
+  [type="submit"]:active
+  .basic-button-primary:visited.basic-button-hover,
+  [type="reset"]:active
+  .basic-button-primary:visited.basic-button-hover,
+  [type="image"]:active
+  .basic-button-primary:visited.basic-button-hover, .basic-button:active
+  button.basic-button-hover,
+  .basic-button-primary:active
+  button.basic-button-hover,
+  .basic-button:visited:active
+  button.basic-button-hover,
+  .basic-button-primary:visited:active
+  button.basic-button-hover,
+  button:active
+  button.basic-button-hover,
+  [type="button"]:active
+  button.basic-button-hover,
+  [type="submit"]:active
+  button.basic-button-hover,
+  [type="reset"]:active
+  button.basic-button-hover,
+  [type="image"]:active
+  button.basic-button-hover, .basic-button:active
+  [type="button"].basic-button-hover,
+  .basic-button-primary:active
+  [type="button"].basic-button-hover,
+  .basic-button:visited:active
+  [type="button"].basic-button-hover,
+  .basic-button-primary:visited:active
+  [type="button"].basic-button-hover,
+  button:active
+  [type="button"].basic-button-hover,
+  [type="button"]:active
+  [type="button"].basic-button-hover,
+  [type="submit"]:active
+  [type="button"].basic-button-hover,
+  [type="reset"]:active
+  [type="button"].basic-button-hover,
+  [type="image"]:active
+  [type="button"].basic-button-hover, .basic-button:active
+  [type="submit"].basic-button-hover,
+  .basic-button-primary:active
+  [type="submit"].basic-button-hover,
+  .basic-button:visited:active
+  [type="submit"].basic-button-hover,
+  .basic-button-primary:visited:active
+  [type="submit"].basic-button-hover,
+  button:active
+  [type="submit"].basic-button-hover,
+  [type="button"]:active
+  [type="submit"].basic-button-hover,
+  [type="submit"]:active
+  [type="submit"].basic-button-hover,
+  [type="reset"]:active
+  [type="submit"].basic-button-hover,
+  [type="image"]:active
+  [type="submit"].basic-button-hover, .basic-button:active
+  [type="reset"].basic-button-hover,
+  .basic-button-primary:active
+  [type="reset"].basic-button-hover,
+  .basic-button:visited:active
+  [type="reset"].basic-button-hover,
+  .basic-button-primary:visited:active
+  [type="reset"].basic-button-hover,
+  button:active
+  [type="reset"].basic-button-hover,
+  [type="button"]:active
+  [type="reset"].basic-button-hover,
+  [type="submit"]:active
+  [type="reset"].basic-button-hover,
+  [type="reset"]:active
+  [type="reset"].basic-button-hover,
+  [type="image"]:active
+  [type="reset"].basic-button-hover, .basic-button:active
+  [type="image"].basic-button-hover,
+  .basic-button-primary:active
+  [type="image"].basic-button-hover,
+  .basic-button:visited:active
+  [type="image"].basic-button-hover,
+  .basic-button-primary:visited:active
+  [type="image"].basic-button-hover,
+  button:active
+  [type="image"].basic-button-hover,
+  [type="button"]:active
+  [type="image"].basic-button-hover,
+  [type="submit"]:active
+  [type="image"].basic-button-hover,
+  [type="reset"]:active
+  [type="image"].basic-button-hover,
+  [type="image"]:active
+  [type="image"].basic-button-hover {
+    background-color: #992C50;
+    border-bottom: 0;
+    outline: none;
+    text-decoration: none; }
+  .basic-button:focus, .basic-button.basic-button-focus,
+  .basic-button-primary:focus,
+  .basic-button-primary.basic-button-focus,
+  .basic-button:visited:focus,
+  .basic-button:visited.basic-button-focus,
+  .basic-button-primary:visited:focus,
+  .basic-button-primary:visited.basic-button-focus,
+  button:focus,
+  button.basic-button-focus,
+  [type="button"]:focus,
+  [type="button"].basic-button-focus,
+  [type="submit"]:focus,
+  [type="submit"].basic-button-focus,
+  [type="reset"]:focus,
+  [type="reset"].basic-button-focus,
+  [type="image"]:focus,
+  [type="image"].basic-button-focus {
+    box-shadow: #CC3B6A; }
+  .basic-button:active, .basic-button.basic-button-active,
+  .basic-button-primary:active,
+  .basic-button-primary.basic-button-active,
+  .basic-button:visited:active,
+  .basic-button:visited.basic-button-active,
+  .basic-button-primary:visited:active,
+  .basic-button-primary:visited.basic-button-active,
+  button:active,
+  button.basic-button-active,
+  [type="button"]:active,
+  [type="button"].basic-button-active,
+  [type="submit"]:active,
+  [type="submit"].basic-button-active,
+  [type="reset"]:active,
+  [type="reset"].basic-button-active,
+  [type="image"]:active,
+  [type="image"].basic-button-active {
+    background-color: #992C50; }
+  .basic-button.basic-button-outline,
+  .basic-button-primary.basic-button-outline,
+  .basic-button:visited.basic-button-outline,
+  .basic-button-primary:visited.basic-button-outline,
+  button.basic-button-outline,
+  [type="button"].basic-button-outline,
+  [type="submit"].basic-button-outline,
+  [type="reset"].basic-button-outline,
+  [type="image"].basic-button-outline {
+    background-color: #ffffff;
+    box-shadow: inset 0 0 0 2px #CC3B6A;
+    color: #CC3B6A !important; }
+    .basic-button.basic-button-outline:hover, .basic-button.basic-button-outline.basic-button-hover,
+    .basic-button-primary.basic-button-outline:hover,
+    .basic-button-primary.basic-button-outline.basic-button-hover,
+    .basic-button:visited.basic-button-outline:hover,
+    .basic-button:visited.basic-button-outline.basic-button-hover,
+    .basic-button-primary:visited.basic-button-outline:hover,
+    .basic-button-primary:visited.basic-button-outline.basic-button-hover,
+    button.basic-button-outline:hover,
+    button.basic-button-outline.basic-button-hover,
+    [type="button"].basic-button-outline:hover,
+    [type="button"].basic-button-outline.basic-button-hover,
+    [type="submit"].basic-button-outline:hover,
+    [type="submit"].basic-button-outline.basic-button-hover,
+    [type="reset"].basic-button-outline:hover,
+    [type="reset"].basic-button-outline.basic-button-hover,
+    [type="image"].basic-button-outline:hover,
+    [type="image"].basic-button-outline.basic-button-hover {
+      box-shadow: inset 0 0 0 2px #992C50;
+      color: #992C50; }
+    .basic-button.basic-button-outline:active, .basic-button.basic-button-outline.basic-button-active,
+    .basic-button-primary.basic-button-outline:active,
+    .basic-button-primary.basic-button-outline.basic-button-active,
+    .basic-button:visited.basic-button-outline:active,
+    .basic-button:visited.basic-button-outline.basic-button-active,
+    .basic-button-primary:visited.basic-button-outline:active,
+    .basic-button-primary:visited.basic-button-outline.basic-button-active,
+    button.basic-button-outline:active,
+    button.basic-button-outline.basic-button-active,
+    [type="button"].basic-button-outline:active,
+    [type="button"].basic-button-outline.basic-button-active,
+    [type="submit"].basic-button-outline:active,
+    [type="submit"].basic-button-outline.basic-button-active,
+    [type="reset"].basic-button-outline:active,
+    [type="reset"].basic-button-outline.basic-button-active,
+    [type="image"].basic-button-outline:active,
+    [type="image"].basic-button-outline.basic-button-active {
+      box-shadow: inset 0 0 0 2px #992C50;
+      color: #992C50; }
+    .basic-button.basic-button-outline:focus, .basic-button.basic-button-outline.basic-button-focus,
+    .basic-button-primary.basic-button-outline:focus,
+    .basic-button-primary.basic-button-outline.basic-button-focus,
+    .basic-button:visited.basic-button-outline:focus,
+    .basic-button:visited.basic-button-outline.basic-button-focus,
+    .basic-button-primary:visited.basic-button-outline:focus,
+    .basic-button-primary:visited.basic-button-outline.basic-button-focus,
+    button.basic-button-outline:focus,
+    button.basic-button-outline.basic-button-focus,
+    [type="button"].basic-button-outline:focus,
+    [type="button"].basic-button-outline.basic-button-focus,
+    [type="submit"].basic-button-outline:focus,
+    [type="submit"].basic-button-outline.basic-button-focus,
+    [type="reset"].basic-button-outline:focus,
+    [type="reset"].basic-button-outline.basic-button-focus,
+    [type="image"].basic-button-outline:focus,
+    [type="image"].basic-button-outline.basic-button-focus {
+      box-shadow: inset 0 0 0 2px #992C50, #CC3B6A; }
+  .basic-button.basic-button-big,
+  .basic-button-primary.basic-button-big,
+  .basic-button:visited.basic-button-big,
+  .basic-button-primary:visited.basic-button-big,
+  button.basic-button-big,
+  [type="button"].basic-button-big,
+  [type="submit"].basic-button-big,
+  [type="reset"].basic-button-big,
+  [type="image"].basic-button-big {
+    font-size: 1.9rem;
+    padding: 1.5rem 3rem; }
+  .basic-button.basic-button-gray,
+  .basic-button-primary.basic-button-gray,
+  .basic-button:visited.basic-button-gray,
+  .basic-button-primary:visited.basic-button-gray,
+  button.basic-button-gray,
+  [type="button"].basic-button-gray,
+  [type="submit"].basic-button-gray,
+  [type="reset"].basic-button-gray,
+  [type="image"].basic-button-gray {
+    background-color: #E0E0E0;
+    color: #CC3B6A; }
+    .basic-button.basic-button-gray:hover,
+    .basic-button-primary.basic-button-gray:hover,
+    .basic-button:visited.basic-button-gray:hover,
+    .basic-button-primary:visited.basic-button-gray:hover,
+    button.basic-button-gray:hover,
+    [type="button"].basic-button-gray:hover,
+    [type="submit"].basic-button-gray:hover,
+    [type="reset"].basic-button-gray:hover,
+    [type="image"].basic-button-gray:hover {
+      background-color: #c7c7c7;
+      border-bottom: 0;
+      text-decoration: none; }
+  .basic-button a, .basic-button span,
+  .basic-button-primary a,
+  .basic-button-primary span,
+  .basic-button:visited a,
+  .basic-button:visited span,
+  .basic-button-primary:visited a,
+  .basic-button-primary:visited span,
+  button a,
+  button span,
+  [type="button"] a,
+  [type="button"] span,
+  [type="submit"] a,
+  [type="submit"] span,
+  [type="reset"] a,
+  [type="reset"] span,
+  [type="image"] a,
+  [type="image"] span {
+    border-bottom: none !important;
+    display: inline-block; }
+
+.basic-button a, .basic-button span {
+  color: #ffffff !important; }
+
+[type='submit']:disabled,
+.basic-button-disabled {
+  background-color: #E0E0E0;
+  color: #333;
+  pointer-events: none; }
+  [type='submit']:disabled:hover, [type='submit']:disabled.basic-button-hover, [type='submit']:disabled:active, [type='submit']:disabled.basic-button-active, [type='submit']:disabled:focus,
+  .basic-button-disabled:hover,
+  .basic-button-disabled.basic-button-hover,
+  .basic-button-disabled:active,
+  .basic-button-disabled.basic-button-active,
+  .basic-button-disabled:focus {
+    background-color: #E0E0E0;
+    border: 0;
+    box-shadow: none;
+    color: #333; }
+
+.button-group {
+  width: 168px;
+  margin: 0 auto;
+  text-align: center; }
+  .button-group input {
+    display: none; }
+  .button-group label {
+    float: left; }
+    .button-group label .button-group-item {
+      background: #ffffff;
+      border: 2px solid #CC3B6A;
+      border-radius: 0;
+      color: #4d4d4d;
+      cursor: pointer;
+      float: left;
+      font-size: 1em;
+      font-weight: normal;
+      line-height: 1;
+      padding: .75em 1em;
+      width: 84px; }
+      .button-group label .button-group-item:focus, .button-group label .button-group-item:hover {
+        background-color: #f7f7f7; }
+    .button-group label input:checked + .button-group-item {
+      background: #CC3B6A;
+      border: 2px solid #94274a;
+      box-shadow: inset 0 1px 2px #a82c54;
+      color: #ffffff; }
+  .button-group :first-child .button-group-item, .button-group :first-child input:checked + .button-group-item {
+    border-right: none; }
+
 .clearfix {
   overflow: auto;
   zoom: 1;
