--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -30,7 +30,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: $body-copy;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   text-align: left;
   color: $base-font-color;
 }
@@ -69,7 +69,7 @@ header {
   li {
     width: 43px;
     height: 52px;
-    padding: 15px 1px 0 11px;
+    padding: 13px 1px 0 10px;
     float: left;
     background: url("../../images/inactiveHex.png") no-repeat center top;
     background-size: 44px;
@@ -81,6 +81,41 @@ header {
     &:hover .fa { color: $action-color; }
   }
 }
+#primary {
+  .hexBG{
+    height: 300px;
+    background: url("../../images/hexagons.png") no-repeat center bottom;
+    background-size: cover;
+    background-clip: content-box;
+  }
+  #hex-image {
+    max-width: 96px;
+    padding-top: 3.5rem;
+  }
+}
+#secondary {
+  .hexBG{
+    height: 250px;
+    background: url("../../images/sub-hexagons.png") no-repeat center bottom;
+    background-size: cover;
+    background-clip: content-box;
+  }
+  #hex-image {
+    max-width: 65px;
+    padding-top: 11rem;
+  }
+}
+.hexBG{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+#hex-image {
+  margin: 0 auto;
+  display: block;
+}
+.portfolio #hex-image { padding-top: 9.5rem !important; }
 
 
 // Typography //
@@ -90,24 +125,24 @@ h1, h2, h3, h4 {
 }
 h1 {
   font-weight: normal;
-  font-size: 2.6rem;
+  font-size: 3.4rem;
   text-align: center;
 
-  @include media ($large-screen) { font-size: 2.8rem; }
+  @include media ($large-screen) { font-size: 3.2rem; }
 }
 h2 {
   font-weight: normal;
-  font-size: 3.2rem;
+  font-size: 4rem;
   text-align: center;
 
-  @include media ($large-screen) { font-size: 4rem; }
+  @include media ($large-screen) { font-size: 5rem; }
 }
 h3 {
   font-weight: normal;
   font-size: 2.5rem;
   line-height: 1rem;
 
-  @include media ($large-screen) { font-size: 3rem; }
+  @include media ($large-screen) { font-size: 2.8rem; }
 }
 h4 {
   font-weight: bold;
@@ -220,23 +255,6 @@ form {
   margin: 0 1rem;
 }
 
-// Header //
-.hexBG{
-  width: 100%;
-  height: 300px;
-  position: absolute;
-  top: 0;
-  z-index: -1;
-  background: url("../../images/hexagons.png") no-repeat center bottom;
-  background-size: cover;
-  background-clip: content-box;
-}
-#profilePic {
-  max-width: 96px;
-  margin: 0 auto;
-  display: block;
-  padding-top: 3.5rem;
-}
 
 // Recent Projects //
 #recentProjects {
@@ -246,7 +264,10 @@ form {
   a:last-of-type {
     .logoWrap {
       padding: 1.8rem 0;
-      img { width: 34px; }
+      img {
+        width: 34px;
+        margin-top: .4rem;
+      }
       @include media ($large-screen) { padding: .8rem 0; }
     }
   }
@@ -255,7 +276,7 @@ form {
   width: 350px;
   height: 220px;
   margin: 0 .5rem 2rem;
-  background: url("../../images/subHexagons.png") no-repeat center top;
+  background: url("../../images/card-hexagons.png") no-repeat center top;
   background-size: 180%;
   background-clip: content-box;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -305,7 +326,6 @@ form {
 
 // Project Containers //
 #project-container {
-  margin-top: 60px;
   .projectLink {
     text-align: center;
     margin: 0 auto;
