--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2842,23 +2842,22 @@ form {
   float: left;
   margin: 0 1rem; }
 
-#recentProjects {
-  max-width: 1150px; }
-  #recentProjects a {
+#featuredProjects {
+  max-width: 760px; }
+  #featuredProjects a {
     text-decoration: none; }
-  #recentProjects a:last-of-type .logoWrap {
+  #featuredProjects a.marginChange .logoWrap {
     padding: 1.8rem 0; }
-    #recentProjects a:last-of-type .logoWrap img {
+    #featuredProjects a.marginChange .logoWrap img {
       width: 34px;
       margin-top: .4rem; }
     @media screen and (min-width: 53.75em) {
-      #recentProjects a:last-of-type .logoWrap {
+      #featuredProjects a.marginChange .logoWrap {
         padding: .8rem 0; } }
 
 .project {
   width: 350px;
-  height: 220px;
-  margin: 0 .5rem 2rem;
+  margin: .5rem .5rem 2rem;
   background: url("../../images/card-hexagons.png") no-repeat center top;
   background-size: 180%;
   background-clip: content-box;
@@ -2891,7 +2890,7 @@ form {
   @media screen and (min-width: 53.75em) {
     .project {
       float: left;
-      margin: 0 .5rem; } }
+      margin: .5rem; } }
 
 #process {
   max-width: 700px;
@@ -2939,6 +2938,15 @@ form {
 
 .contact {
   margin-top: 60px; }
+
+.projects {
+  max-width: 760px;
+  margin-top: 60px; }
+  .projects .project {
+    background: none;
+    padding: 1rem 0; }
+    .projects .project a {
+      color: #333; }
 
 footer .in-progress {
   width: 100%;
