--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2635,7 +2635,7 @@ section {
   padding: 2rem; }
 
 header {
-  margin: 60px 0 0 0;
+  margin: 100px 0 0 0;
   z-index: 10; }
   header::after {
     clear: both;
@@ -2683,10 +2683,11 @@ header {
   height: 300px;
   background: url("../../images/hexagons.png") no-repeat center bottom;
   background-size: cover;
-  background-clip: content-box; }
+  background-clip: content-box;
+  margin-top: 50px; }
 #primary #hex-image {
   max-width: 96px;
-  padding-top: 3.5rem; }
+  padding-top: 4.5rem; }
 
 #secondary .hexBG {
   height: 250px;
@@ -2762,12 +2763,19 @@ a:hover {
 
 .centered-navigation {
   background-color: #ffffff;
-  border-bottom: 1px solid #CC3B6A;
+  border-bottom: 2px solid #CC3B6A;
   min-height: 60px;
   width: 100%;
   z-index: 9999;
   position: fixed;
   top: 0; }
+  .centered-navigation .in-progress {
+    width: 100%;
+    background-color: #ffffff;
+    border-bottom: 2px solid #CC3B6A;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 1rem; }
   .centered-navigation .centered-navigation-mobile-menu {
     color: #CC3B6A;
     display: block;
@@ -2947,12 +2955,5 @@ form {
     padding: 1rem 0; }
     .projects .project a {
       color: #333; }
-
-footer .in-progress {
-  width: 100%;
-  background-color: #E0E0E0;
-  text-align: center;
-  padding: 1rem;
-  margin-top: 1rem; }
 
 /*# sourceMappingURL=main.css.map */
