--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -100,10 +100,11 @@ header {
     background: url("../../images/sub-hexagons.png") no-repeat center bottom;
     background-size: cover;
     background-clip: content-box;
+    margin-top: 60px;
   }
   #hex-image {
     max-width: 65px;
-    padding-top: 11rem;
+    padding-top: 17rem;
   }
 }
 .hexBG{
@@ -340,6 +341,7 @@ form {
 
 // Project Containers //
 #project-container {
+  margin-top: 4rem; 
   .projectLink {
     text-align: center;
     margin: 0 auto;
@@ -353,7 +355,7 @@ form {
   h2 { margin: 3rem 0; }
   h3 { margin-top: 5rem; }
   h3, h4 { text-align: center; }
-  section { margin-top: 60px; }
+  section { margin-top: 100px; }
   #fellow, #vis, #intern {
     img {
       max-width: 65px;
@@ -389,7 +391,7 @@ form {
 
 
 // Contact //
-.contact { margin-top: 60px; }
+.about { margin-top: 100px; }
 
 
 // All Projects //
