--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -287,6 +287,7 @@ form {
       @include media ($large-screen) { padding: .8rem 0; }
     }
   }
+  .project { height: 220px; }
 }
 .project {
   width: 350px;
@@ -341,7 +342,7 @@ form {
 
 // Project Containers //
 #project-container {
-  margin-top: 4rem; 
+  margin-top: 4rem;
   .projectLink {
     text-align: center;
     margin: 0 auto;
@@ -352,7 +353,7 @@ form {
 
 //  Resume //
 .resume {
-  h2 { margin: 3rem 0; }
+  h2 { margin: 10rem 0 2rem; }
   h3 { margin-top: 5rem; }
   h3, h4 { text-align: center; }
   section { margin-top: 100px; }
@@ -364,7 +365,7 @@ form {
       display: block;
     }
     .project {
-      height: 160px;
+      height: 170px;
       background: none;
     }
   }
