--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -10,6 +10,26 @@ $action-color: #CC3B6A;
 $action-color-darker: #992C50;
 $accent-color: #799299;
 
+$base-border-color: gainsboro !default;
+$base-border-radius: 3px !default;
+$base-background-color: $white !default;
+$base-spacing: 1.5em !default;
+$base-font-color: $dark-gray !default;
+$card-border-color: $accent-color;
+$card-border: 1px solid $card-border-color;
+$card-background: lighten($card-border-color, 10%);
+$card-header-background: $action-color;
+$card-margin: 1em;
+$card-image-hover-opacity: 0.7;
+$card-image-hover-color: $white;
+
+$centered-navigation-padding: 1em;
+$centered-navigation-background: $white;
+$centered-navigation-height: 60px;
+$centered-navigation-item-padding: 1em;
+$centered-navigation-item-nudge: 2.2em;
+$horizontal-bar-mode: $large-screen;
+
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "font-awesome";
@@ -166,13 +186,6 @@ a:hover { color: $dark-gray; }
 
 // Nav //
 .centered-navigation {
-  $centered-navigation-padding: 1em;
-  $centered-navigation-background: $white;
-  $centered-navigation-height: 60px;
-  $centered-navigation-item-padding: 1em;
-  $centered-navigation-item-nudge: 2.2em;
-  $horizontal-bar-mode: $large-screen;
-
   background-color: $centered-navigation-background;
   border-bottom: 2px solid $action-color;
   min-height: $centered-navigation-height;
@@ -275,16 +288,83 @@ form {
 // Featured Projects //
 #featuredProjects {
   max-width: 760px;
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    a:link, a:visited, a:active {
+      color: $dark-gray;
+      font-weight: normal;
+      border-bottom: 0;
+      text-decoration: none;
+    }
+  }
 
-  a { text-decoration: none; }
-  a.marginChange {
-    .logoWrap {
-      padding: 1.8rem 0;
+  .card {
+    border: $card-border;
+    border-radius: $base-border-radius;
+    box-shadow: 0 2px 4px darken($base-background-color, 10%);
+    cursor: pointer;
+    flex-basis: 15em;
+    flex-grow: 1;
+    margin: 0 $card-margin $base-spacing $card-margin;
+    position: relative;
+    transition: all 0.2s ease-in-out;
+
+    .card-image {
+      background: url("../../images/card-hexagons.png") no-repeat center top;
+      height: 110px;
+      max-height: 150px;
+      overflow: hidden;
+
       img {
-        width: 34px;
-        margin-top: .4rem;
+        @include border-top-radius($base-border-radius);
+        opacity: 1;
+        transition: all 0.2s ease-in-out;
+        width: 35px;
+        margin: 3rem auto;
+        display: block;
       }
-      @include media ($large-screen) { padding: .8rem 0; }
+      .square { margin-top: 2rem; }
+    }
+
+    .card-header {
+      background-color: $card-header-background;
+      border-radius: $base-border-radius $base-border-radius 0 0;
+      font-weight: bold;
+      text-align: center;
+      line-height: 2.5em;
+      padding: ($base-spacing / 3) ($base-spacing / 2);
+      transition: all 0.2s ease-in-out;
+      h3 { color: $white; }
+    }
+
+    .card-copy {
+      background-color: $white;
+      font-size: 0.9em;
+      line-height: 1.5em;
+      padding: ($base-spacing / 2) ($base-spacing / 2);
+
+      p {
+        margin: 0 0 ($base-spacing / 2);
+      }
+    }
+
+    &:focus,
+    &:hover {
+      cursor: pointer;
+
+      img {
+        opacity: $card-image-hover-opacity;
+      }
+    }
+
+    &:active {
+      background-color: $card-background;
+
+      .card-header {
+        background-color: $card-background;
+      }
     }
   }
 }
@@ -341,7 +421,7 @@ form {
 
 // Project Containers //
 #project-container {
-  margin-top: 4rem; 
+  margin-top: 4rem;
   .projectLink {
     text-align: center;
     margin: 0 auto;
